Improvement * Improved some stuff

--- a/api/template/index.html
+++ b/api/template/index.html
@@ -197,19 +197,21 @@
                                     suggestedMax: 100,
                                     fontColor: 'white'
                                 }, gridLines: {
-                                    color: 'lightgray'
+                                    color: 'gray'
                                 }
                             }], xAxes: [{
                                 ticks: {
                                     fontColor: 'white'
                                 }, gridLines: {
-                                    color: 'lightgray'
+                                    color: 'gray'
                                 }
                             }]
                         }, legend: {
                             labels: {
-                                // This more specific font property overrides the global property
-                                fontColor: 'white'
+                                fontColor: 'white',
+                                fontStyle: 'bold',
+                                textSize: 16,
+                                boxWidth: 20
                             }
                         }
                     }
